# backend/swagger.yaml
@@ -283,6 +283,45 @@ paths:
                 "uptime": "1h5m31.570680928s"
               }
   
+  /auth/setup:
+    post:
+      summary: User setup endpoint
+      description: |
+        Takes email, password, and name to create new user, setting cookies to log them in at the same time
+      tags:
+      - Primary
+      requestBody:
+        required: true
+        content:
+          type: json object
+          properties:
+            Name:
+              type: string
+              description: |
+                The name of the prospective user
+            UUID:
+              type: string
+              description: |
+                The email address of the prospective user
+            Password:
+              type: string
+              description: |
+                The desired password of the prospective user
+            PasswordConfirm:
+              type: string
+              description: |
+                The re-entered password of the prospective user
+      responses:
+        '200':
+          description: |
+            Successfully created user, logged in
+        '400':
+          description: |
+            Unable to decode json, not all fields provided, email already exists in db, passwords are not equal
+        '500':
+          description: |
+            Error hashing password or inserting user into database, failed to create token for login
+
   /auth/login:
     post:
       summary: Login endpoint
